final commit of readme details
